@@ -1,5 +1,3 @@
-DIST ffmpeg-0.6.tar.bz2 3720372 RMD160 1ff6a8f419239a03d84f67cc954f60f73632432a SHA1 c130e3bc368251b9130ce6eafb44fe8c3993ff5c SHA256 6730baa6750f0cbffaf5f4c04f8ddcf1ebe6c651a6eeb12ae947a228de4c8120
-EBUILD ffmpeg-0.6.ebuild 8108 RMD160 543fd68fbd91491e3f79660fce1259c4e4fbd492 SHA1 eafc1b2e1e3922919ac3f786f208b03b19ab6c10 SHA256 3b25ceba994101f9ce8f7921d26bdd4149a72d309563b7feebef5e5329db3433
-EBUILD ffmpeg-9999-r1.ebuild 8540 RMD160 dc07564418838b3fe01bdabd525b24f5e593f8aa SHA1 c7f278cd42015e7a944b1e4a3b1bc38d5e2cdb8c SHA256 44e308d91b4b8baf94223fefa1e6d01a42853e347505668ab6e035d3296ed3b6
-MISC ChangeLog 659 RMD160 5f7270bfe9bf3629b7eefe6b14dc542f9293bcc0 SHA1 b8a75e55867d00959efc2f1c1d529cbffc943876 SHA256 b0a07b271a4ad2400ae4b6bdfbb56ca293f6ed7918cefeb91ef7eceec12e5844
-MISC metadata.xml 2114 RMD160 771bdcbeefe47f96a86022c590268791fbf35db4 SHA1 a1d4365de50ac20b6775f94e5b29ce2acabc31c1 SHA256 8e3c4ee0a34747dc0e5893c9749ab54fe989494e4fd28eff04e5015c961fc8ba
+EBUILD ffmpeg-9999.ebuild 8540 RMD160 dc07564418838b3fe01bdabd525b24f5e593f8aa SHA1 c7f278cd42015e7a944b1e4a3b1bc38d5e2cdb8c SHA256 44e308d91b4b8baf94223fefa1e6d01a42853e347505668ab6e035d3296ed3b6
+MISC ChangeLog 844 RMD160 ffc515f672433bb833543aff361407a11802047a SHA1 29025c50f2aedec0f708f5b15d33e290ee315baa SHA256 6785b8d9317a03b4cde786594380995f72a9a1283a5ddef820f7b43f1a07e78d
+MISC metadata.xml 2037 RMD160 2623b1664678435eea628042f58cd0ed6ecd13ce SHA1 071745c6335645599f29137f558afc5941bd1e4c SHA256 d8c8452be59912c1d0cad56cd81fe863ffac096d4d58ed3fa8e14069d8b073e4
