@@ -2,6 +2,12 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*ffmpeg-9999 (26 Dec 2010)
+
+  26 Dec 2010; Nikoli <nikoli@lavabit.com> -ffmpeg-0.6.ebuild,
+  +ffmpeg-9999.ebuild, -ffmpeg-9999-r1.ebuild, metadata.xml:
+  remove old, sync with portage
+
   15 Nov 2010; Nikoli <nikoli@lavabit.com> ffmpeg-9999-r1.ebuild,
   metadata.xml:
   migrate to git, support ffmpeg-mt, sync with portage
